Dark mode with LS, style corrections and initializer functions

--- a/src/app/shared/components/aside/aside.component.css
+++ b/src/app/shared/components/aside/aside.component.css
@@ -1,6 +1,6 @@
 aside{
-  height: calc(100vh - 106px);
-  transform: translateX(-500px);
+  /* height: calc(100vh - 106px); */
+  transform: translateX(-150%);
   transition: transform 800ms cubic-bezier(.8, 0, .33, 1);
 }
 
