--- a/src/app/shared/layouts/admin-layout/admin-layout.component.css
+++ b/src/app/shared/layouts/admin-layout/admin-layout.component.css
@@ -3,6 +3,6 @@
 }
 
 main{
-  height: calc(100vh - 106px) !important;
+  /* height: calc(100vh - 106px) !important; */
   transition: transform 800ms cubic-bezier(.8, 0, .33, 1), width 800ms cubic-bezier(.8, 0, .33, 1);
 }
